--- a/celebrate/pages/mc_user_view.html
+++ b/celebrate/pages/mc_user_view.html
@@ -13,7 +13,7 @@
     <!-- Font Awesome Online -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../assets/css/book_mc.css">
+    <link rel="stylesheet" href="../assets/css/mc_user_view.css">
     <!-- Header-Footer CSS -->
     <link rel="stylesheet" href="../assets/css/header-footer.css">
     <!-- Utilities CSS -->
@@ -142,172 +142,95 @@
     <!-- ====== Main ====== -->
     <main>
 
-        <!-- MCs -->
-        <section id="mcs" class="text-black bg-white">
+        <!-- Mc -->
+        <section id="mc" class="text-black bg-white">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">Masters of Ceremony | Official</h2>
+                <div class="row flex pt-5 pb-1">
+                    <div class="mc-details">
+                        <div class="mc-img">
+                            <img src="../assets/img/user/user1.jpg" alt="">
+                        </div>
+                        <h3 class="pt-1">Mc Maeda</h3>
+                    </div>
+                    <div class="mc-about">
+                        <h2 class="text-left">About Me</h2>
+                        <p>
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                        </p>
+                        <div class="mc-social">
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-google"></i>
+                            </a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex">
+                    <div class="card p-4">
+                        <h3 class="pb-1">My Calendar</h3>
+                        <p>
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                        </p>
+                        <p>
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous
+                            moments, no regret working with me.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container pt-2">
+                <div class="row flex">
+                    <h2 class="display-4">My Gallery</h2>
+                </div>
                 <div class="row flex even-columns pt-3 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid" on>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc4.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc1.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc2.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
-                <div class="row flex even-columns pt-0 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
+                <div class="row flex even-columns pt-3 pb-0">
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc4.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc1.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row flex even-columns pt-0 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc2.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
         </section>
-        <!-- End MCs -->
+        <!-- End Bookings -->
+
     </main>
     <!-- End Main -->
 
@@ -383,7 +306,7 @@
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/book_mc.js"></script>
+    <script src="../assets/js/mc_user_view.js"></script>
     <!-- End Scripts -->
 </body>
 
