--- a/celebrate/pages/book_mc_casual.html
+++ b/celebrate/pages/book_mc_casual.html
@@ -160,7 +160,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -247,7 +247,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -266,7 +266,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -300,7 +300,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
