--- a/celebrate/pages/mc_change_pass.html
+++ b/celebrate/pages/mc_change_pass.html
@@ -61,13 +61,13 @@
             <p class="dashb-text"><i class="fas fa-cog"></i> Dashboard</p>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="" class="nav-link"><i class="fas fa-home"></i> Home</a>
+                    <a href="mc_home.html" class="nav-link"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link"><i class="fas fa-user"></i> Profile</a>
+                    <a href="mc_profile.html" class="nav-link"><i class="fas fa-user"></i> Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link"><i class="fas fa-lock"></i> Change Password</a>
+                    <a href="mc_change_pass.html" class="nav-link"><i class="fas fa-lock"></i> Change Password</a>
                 </li>
                 <li class="nav-item">
                     <a href="" class="nav-link"><i class="fas fa-comments"></i> Posts</a>
@@ -76,7 +76,7 @@
                     <a href="" class="nav-link"><i class="fas fa-cogs"></i> Settings</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link"><i class="fas fa-eject"></i> Logout</a>
+                    <a href="" class="nav-link"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </li>
             </ul>
         </aside>
@@ -92,29 +92,35 @@
                 <div class="display-4"><i class="fas fa-cog"></i> Dashboard</div>
                 <div class="row flex even-columns pt-4 pb-3">
                     <div class="mc-account">
-                        <h2 class="pb-1">My Profile</h2>
+                        <h2 class="pb-1 text-center">Change Password</h2>
                         <form action="">
                             <div class="input-group">
-                                <h4 class="label">Username:</h4>
-                                <div class="names">
-                                    <div class="name">
-                                        <input type="text" name="fname" id="fname" placeholder="Username" required>
-                                        <i class="icon fas fa-user-alt"></i>
-                                    </div>
+                                <h4 class="label">Current Password:</h4>
+                                <div class="pswd-1">
+                                    <input type="password" name="pswd" id="pswd_1" placeholder="Current Password"
+                                        required>
+                                    <i class="icon fas fa-lock"></i>
+                                    <i class="eye fas fa-eye text-gray"></i>
+                                    <i class="eye fas fa-eye-slash text-gray"></i>
                                 </div>
                             </div>
                             <div class="input-group">
-                                <h4 class="label">Email:</h4>
-                                <div class="email-group">
-                                    <input type="email" name="email" id="email" placeholder="Email" required>
-                                    <i class="icon fas fa-envelope"></i>
+                                <h4 class="label">New Password:</h4>
+                                <div class="pswd-2">
+                                    <input type="password" name="pswd" id="pswd_2" placeholder="New Password" required>
+                                    <i class="icon fas fa-lock"></i>
+                                    <i class="eye fas fa-eye text-gray"></i>
+                                    <i class="eye fas fa-eye-slash text-gray"></i>
                                 </div>
                             </div>
                             <div class="input-group">
-                                <h4 class="label">Biography:</h4>
-                                <div class="biography">
-                                    <textarea name="bio" id="" cols="30" rows="5" placeholder="Biography"></textarea>
-                                    <i class="icon fas fa-comment"></i>
+                                <h4 class="label">Confirm Password:</h4>
+                                <div class="pswd-3">
+                                    <input type="password" name="pswd" id="pswd_2" placeholder="Confirm Password"
+                                        required>
+                                    <i class="icon fas fa-lock"></i>
+                                    <i class="eye fas fa-eye text-gray"></i>
+                                    <i class="eye fas fa-eye-slash text-gray"></i>
                                 </div>
                             </div>
                             <div class="sign-in-up">
@@ -122,40 +128,10 @@
                             </div>
                         </form>
                     </div>
-                    <div class="mc-details">
-                        <div class="mc-img">
-                            <img src="../assets/img/user/user1.jpg" alt="">
-                        </div>
-                        <div class="action-buttons">
-                            <button class="btn btn-primary">Edit</button>
-                            <button class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row flex">
-                    <div class="card p-4">
-                        <h3 class="pb-1">My Calendar</h3>
-                        <p>
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                        </p>
-                        <p>
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                        </p>
-                    </div>
                 </div>
             </div>
         </section>
-        <!-- End Bookings -->
+        <!-- End Mc -->
 
     </main>
     <!-- End Main -->
