More and more changes

--- a/celebrate/pages/mc_change_pass.html
+++ b/celebrate/pages/mc_change_pass.html
@@ -23,6 +23,7 @@
 <body id="home">
     <!-- ====== Header ====== -->
     <nav class="navbar">
+        <!-- Dots Menu -->
         <label for="check" id="checkbtn">
             <div class="menu">
                 <div class="menu-bar-group-1">
@@ -43,13 +44,15 @@
             </div>
         </label>
         <input type="checkbox" name="check" id="check">
-        <div class="notify-user">
-            <div class="notify">
-                <div class="bell-badge">
-                    <div class="badge">0</div>
-                    <i class="fas fa-bell"></i>
-                </div>
+        <!-- Notify-User -->
+        <div class="notify">
+            <div class="bell-badge">
+                <div class="badge">0</div>
+                <i class="fas fa-bell"></i>
             </div>
+        </div>
+        <div class="notify-user">
+            <h4>Welcome Prosper</h4>
             <div class="user">
                 <div class="user-img">
                     <img src="../assets/img/user/user1.jpg" alt="">
