--- a/mservices/index.html
+++ b/mservices/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head id="home">
     <!-- Metadata -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,8 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#" class="nav-brand-text"><span>M Services | Electrical contractor</span></a>
+                <a href="#" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
+                        class="far fa-lightbulb text-danger"></i></a>
             </div>
             <label for="check" id="check-btn">
                 <i class="fas fa-th"></i>
@@ -45,31 +46,265 @@
                 <li class="nav-item"><a href="pages/projects.html" class="nav-link">Projects</a></li>
                 <li class="nav-item"><a href="pages/contact.html" class="nav-link">Contact</a></li>
             </ul>
-            <a href="tel:+255 713 500 365" class="btn btn-call">Call us now</a>
+            <a href="tel:+255 713 500 365" class="btn btn-call">Call Us Now</a>
         </nav>
     </header>
 
     <!-- ====== Main ====== -->
     <main>
+        <!-- Hero -->
         <section id="hero">
             <div class="container">
                 <div class="row flex even-columns">
                     <div class="hero-text">
-                        <h1 class="display-4">Your Electrical Contractor</h1>
+                        <h1 class="display-4">Meet Electrical Contractor</h1>
                         <p>
                             Who embraces and maintains international standards in provision of electrical
                             services while safeguarding highest standard of corporate social responsibility
                             taking into account safety, health and environmental care.
                         </p>
-                        <a href="tel:+255 713 500 365" class="btn">Call us now</a>
+                        <a href="tel:+255 713 500 365" class="btn">Call Us Now</a>
+                    </div>
+                    <div class="social">
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-pinterest"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-twitter"></i>
+                        </a>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Electrical Installation -->
+        <section id="maintenance">
+            <div class="container">
+                <div class="row flex even-columns">
+                    <div class="maintain-img">
+                        <img src="assets/img/40.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="maintain-text">
+                        <h1 class="display-1">Electrical Installation</h1>
+                        <p>
+                            We do supply, install, test and commissioning of electrical systems for residential,
+                            industrial
+                            and commercial buildings.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Civil Work -->
+        <section id="maintenance" class="bg-dark">
+            <div class="container">
+                <div class="row flex even-columns">
+                    <div class="maintain-text">
+                        <h1 class="display-1">Civil Works</h1>
+                        <p>
+                            We offer our expertise in renovation & partitioning works.
+                            Construction, Testing and Commissioning Medium Voltage (MV) Transmission
+                            and Low Voltage (LV) Power Distribution Lines (Overhead & Underground).
+                        </p>
+                    </div>
+                    <div class="maintain-img">
+                        <img src="assets/img/42.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Renewable Energy -->
+        <section id="maintenance">
+            <div class="container">
+                <div class="row flex even-columns">
+                    <div class="maintain-img">
+                        <img src="assets/img/68.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="maintain-text">
+                        <h1 class="display-1">Renewable Energy</h1>
+                        <p>
+                            The supply, installation, testing and commission of renewable energy system
+                            (solar energy).
+                            Design and Installation of Lightning Protection Schemes.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Commercial Electrician -->
+        <section id="commercial">
+            <div class="container">
+                <div class="row flex even-columns">
+                    <div class="commercial-text">
+                        <h1 class="display-4">Commercial Electrician</h1>
+                        <p>
+                            Installing, Testing and Commissioning of electrical systems for commercial buildings.
+                        </p>
+                        <a href="tel:+255 713 500 365" class="btn">Enquire Service Now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Substations Construction-->
+        <section id="maintenance" class="bg-light">
+            <div class="container">
+                <div class="row flex even-columns">
+                    <div class="maintain-text">
+                        <h1 class="display-1">Substations Construction</h1>
+                        <p>
+                            Construction of substations including Installation, Test and Commissioning of transformer
+                            and related
+                            civil works.
+                        </p>
+                    </div>
+                    <div class="maintain-img">
+                        <img src="assets/img/77.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonials -->
+        <section id="testimonials">
+            <div class="container">
+                <h1 class="display-1">Testimonials</h1>
+                <div class="row flex even-columns pt-2">
+                    <div class="card">
+                        <i class="fas fa-quote-left"></i>
+                        <img src="assets/img/user/user1.jpg" alt="user">
+                        <p>
+                            Show respect and value all individuals for their diverse backgrounds, expe
+                            riences, styles, approaches and ideas.
+                        </p>
+                        <div class="rate-name flex-space-between">
+                            <small>- Francis Lubida</small>
+                            <div class="rating">
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star-half-alt text-warning"></i>
+                                <i class="far fa-star text-warning"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <i class="fas fa-quote-left"></i>
+                        <img src="assets/img/user/user1.jpg" alt="user">
+                        <p>
+                            Show respect and value all individuals for their diverse backgrounds, expe
+                            riences, styles, approaches and ideas.
+                        </p>
+                        <div class="rate-name flex-space-between">
+                            <small>- Prosper Mbuma</small>
+                            <div class="rating">
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="far fa-star text-warning"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <i class="fas fa-quote-left"></i>
+                        <img src="assets/img/user/user1.jpg" alt="user">
+                        <p>
+                            Show respect and value all individuals for their diverse backgrounds, expe
+                            riences, styles, approaches and ideas.
+                        </p>
+                        <div class="rate-name flex-space-between">
+                            <small>- Joseph Nicholas</small>
+                            <div class="rating">
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="far fa-star text-warning"></i>
+                                <i class="far fa-star text-warning"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Partners -->
+        <section id="partners" class="bg-white">
+            <div class="container">
+                <h1 class="display-4">Partiners</h1>
+                <div class="row flex pt-3">
+                    <div class="car"><img src="assets/img/partner/partner1.png" alt="partner"></div>
+                    <div class="car"><img src="assets/img/partner/partner2.png" alt="partner"></div>
+                    <div class="car"><img src="assets/img/partner/partner3.png" alt="partner"></div>
+                </div>
+            </div>
             </div>
         </section>
     </main>
 
     <!-- ====== Footer ====== -->
-    <footer></footer>
+    <footer class="bg-white">
+        <div class="container">
+            <div class="row even-columns">
+                <div class="col">
+                    <h1 class="display-2">M Services</h1>
+                </div>
+                <div class="col">
+                    <h3>
+                        Quick Links
+                    </h3>
+                    <nav class="footer-nav">
+                        <a href="#home">Home</a>
+                        <a href="pages/about.html">About</a>
+                        <a href="pages/services.html">Services</a>
+                        <a href="pages/projects.html">Projects</a>
+                        <a href="pages/contact.html">Contact</a>
+                    </nav>
+                </div>
+                <div class="col">
+                    <h3>
+                        Our Social media
+                    </h3>
+                    <div class="social">
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-pinterest"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-space-between pt-2">
+                <p class="lead pt-2">&copy; <span id="year"></span> M Services, All Rights Reserved</p>
+                <div class="footer-brand">
+                    <span>M Services | Electrical contractor</span> <i class="far fa-lightbulb text-danger"></i>
+                </div>
+            </div>
+        </div>
+        <!-- Go-Top -->
+        <div class="go_top">
+            <a href="#home">
+                <span class="fas fa-angle-up"></span>
+            </a>
+        </div>
+        <!-- End Go-Top -->
+    </footer>
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
