--- a/mservices/index.html
+++ b/mservices/index.html
@@ -256,7 +256,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <h1 class="display-2">M Services</h1>
+                    <h1 class="display-4">M Services | Electrical contractor <i class="far fa-lightbulb text-danger"></i></h1>
                 </div>
                 <div class="col">
                     <h3>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="col">
                     <h3>
-                        Our Social media
+                        Follow Us
                     </h3>
                     <div class="social">
                         <a href="#" target="_blank" rel="noopener noreferrer">
