--- a/mservices/index.html
+++ b/mservices/index.html
@@ -242,9 +242,14 @@
             <div class="container">
                 <h1 class="display-4">Partiners</h1>
                 <div class="row flex pt-3">
-                    <div class="car"><img src="assets/img/partner/partner1.png" alt="partner"></div>
-                    <div class="car"><img src="assets/img/partner/partner2.png" alt="partner"></div>
-                    <div class="car"><img src="assets/img/partner/partner3.png" alt="partner"></div>
+                    <div class="partner"><a href="http://www.tanesco.co.tz" target="_blank"
+                            rel="noopener noreferrer"><img src="assets/img/partner/partner1.png" alt="partner"></a>
+                    </div>
+                    <div class="partner"><a href="http://www.ewura.go.tz" target="_blank" rel="noopener noreferrer"><img
+                                src="assets/img/partner/partner3.jpg" alt="partner"></a></div>
+                    <div class="partner"><a href="http://www.tanzania.go.tz" target="_blank"
+                            rel="noopener noreferrer"><img src="assets/img/partner/partner2.png" alt="partner"></a>
+                    </div>
                 </div>
             </div>
             </div>
@@ -252,11 +257,12 @@
     </main>
 
     <!-- ====== Footer ====== -->
-    <footer class="bg-white">
+    <footer>
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <h1 class="display-4">M Services | Electrical contractor <i class="far fa-lightbulb text-danger"></i></h1>
+                    <h1 class="display-4">M Services | Electrical contractor <i
+                            class="far fa-lightbulb text-danger"></i></h1>
                 </div>
                 <div class="col">
                     <h3>
