Something better has been done

--- a/mservices/index.html
+++ b/mservices/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- AOS (Animation On Scroll CSS) -->
+    <link href="assets/vendors/aos/aos.css" rel="stylesheet">
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- Custom CSS -->
@@ -87,10 +89,10 @@
         <section id="maintenance">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="maintain-img">
+                    <div class="maintain-img" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/40.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="maintain-text">
+                    <div class="maintain-text" data-aos="fade-left" data-aos-delay="100">
                         <h1 class="display-1">Electrical Installation</h1>
                         <p>
                             We do supply, install, test and commissioning of electrical systems for residential,
@@ -106,7 +108,7 @@
         <section id="maintenance" class="bg-dark">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="maintain-text">
+                    <div class="maintain-text" data-aos="fade-right" data-aos-delay="100">
                         <h1 class="display-1">Civil Works</h1>
                         <p>
                             We offer our expertise in renovation & partitioning works.
@@ -114,7 +116,7 @@
                             and Low Voltage (LV) Power Distribution Lines (Overhead & Underground).
                         </p>
                     </div>
-                    <div class="maintain-img">
+                    <div class="maintain-img" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/42.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
@@ -125,10 +127,10 @@
         <section id="maintenance">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="maintain-img">
+                    <div class="maintain-img" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/68.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="maintain-text">
+                    <div class="maintain-text" data-aos="fade-left" data-aos-delay="100">
                         <h1 class="display-1">Renewable Energy</h1>
                         <p>
                             The supply, installation, testing and commission of renewable energy system
@@ -159,7 +161,7 @@
         <section id="maintenance" class="bg-light">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="maintain-text">
+                    <div class="maintain-text" data-aos="fade-right" data-aos-delay="100">
                         <h1 class="display-1">Substations Construction</h1>
                         <p>
                             Construction of substations including Installation, Test and Commissioning of transformer
@@ -167,7 +169,7 @@
                             civil works.
                         </p>
                     </div>
-                    <div class="maintain-img">
+                    <div class="maintain-img" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/77.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
@@ -177,7 +179,7 @@
         <!-- Testimonials -->
         <section id="testimonials">
             <div class="container">
-                <h1 class="display-1">Testimonials</h1>
+                <h1 class="display-1" data-aos="fade-right" data-aos-delay="100">Testimonials</h1>
                 <div class="row flex even-columns pt-2">
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
@@ -240,7 +242,7 @@
         <!-- Partners -->
         <section id="partners" class="bg-white">
             <div class="container">
-                <h1 class="display-4">Partiners</h1>
+                <h1 class="display-4" data-aos="fade-right" data-aos-delay="100">Partiners</h1>
                 <div class="row flex pt-3">
                     <div class="partner"><a href="http://www.tanesco.co.tz" target="_blank"
                             rel="noopener noreferrer"><img src="assets/img/partner/partner1.png" alt="partner"></a>
@@ -319,6 +321,8 @@
         crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="assets/vendors/jquery/jquery.min.js"></script>
+    <!-- AOS (Animation On Scroll JS) -->
+    <script src="assets/vendors/aos/aos.js"></script>
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/index.js"></script>
