--- a/mservices/index.html
+++ b/mservices/index.html
@@ -42,7 +42,7 @@
             </label>
             <input type="checkbox" name="check" id="check">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
+                <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href="pages/about.html" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="pages/services.html" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="pages/projects.html" class="nav-link">Projects</a></li>
@@ -69,9 +69,6 @@
                     </div>
                     <div class="social">
                         <a href="#" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-pinterest"></i>
-                        </a>
-                        <a href="#" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
                         <a href="#" target="_blank" rel="noopener noreferrer">
@@ -86,13 +83,13 @@
         </section>
 
         <!-- Electrical Installation -->
-        <section id="maintenance">
+        <section id="electric-install">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="maintain-img" data-aos="fade-up" data-aos-delay="100">
+                    <div class="electric-img" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/40.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="maintain-text" data-aos="fade-left" data-aos-delay="100">
+                    <div class="electric-text" data-aos="fade-left" data-aos-delay="100">
                         <h1 class="display-1">Electrical Installation</h1>
                         <p>
                             We do supply, install, test and commissioning of electrical systems for residential,
@@ -105,10 +102,10 @@
         </section>
 
         <!-- Civil Work -->
-        <section id="maintenance" class="bg-dark">
+        <section id="civil-work" class="bg-dark">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="maintain-text" data-aos="fade-right" data-aos-delay="100">
+                    <div class="civil-text" data-aos="fade-right" data-aos-delay="100">
                         <h1 class="display-1">Civil Works</h1>
                         <p>
                             We offer our expertise in renovation & partitioning works.
@@ -116,7 +113,7 @@
                             and Low Voltage (LV) Power Distribution Lines (Overhead & Underground).
                         </p>
                     </div>
-                    <div class="maintain-img" data-aos="fade-up" data-aos-delay="100">
+                    <div class="civil-img" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/42.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
@@ -124,16 +121,16 @@
         </section>
 
         <!-- Renewable Energy -->
-        <section id="maintenance">
+        <section id="renewable-energy">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="maintain-img" data-aos="fade-up" data-aos-delay="100">
+                    <div class="renewable-img" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/68.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="maintain-text" data-aos="fade-left" data-aos-delay="100">
+                    <div class="renewable-text" data-aos="fade-left" data-aos-delay="100">
                         <h1 class="display-1">Renewable Energy</h1>
                         <p>
-                            The supply, installation, testing and commission of renewable energy system
+                            We do supply, install, testing and commissioning of renewable energy system
                             (solar energy).
                             Design and Installation of Lightning Protection Schemes.
                         </p>
@@ -158,10 +155,10 @@
         </section>
 
         <!-- Substations Construction-->
-        <section id="maintenance" class="bg-light">
+        <section id="sub-construction" class="bg-light">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="maintain-text" data-aos="fade-right" data-aos-delay="100">
+                    <div class="sub-text" data-aos="fade-right" data-aos-delay="100">
                         <h1 class="display-1">Substations Construction</h1>
                         <p>
                             Construction of substations including Installation, Test and Commissioning of transformer
@@ -169,7 +166,7 @@
                             civil works.
                         </p>
                     </div>
-                    <div class="maintain-img" data-aos="fade-up" data-aos-delay="100">
+                    <div class="sub-img" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/77.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
@@ -179,7 +176,7 @@
         <!-- Testimonials -->
         <section id="testimonials">
             <div class="container">
-                <h1 class="display-1" data-aos="fade-right" data-aos-delay="100">Testimonials</h1>
+                <h1 class="display-1">Testimonials</h1>
                 <div class="row flex even-columns pt-2">
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
@@ -187,9 +184,11 @@
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
+                            Show respect and value all individuals for their diverse backgrounds, expe
+                            riences, styles, approaches and ideas.
                         </p>
                         <div class="rate-name flex-space-between">
-                            <small>- Francis Lubida</small>
+                            <h4>Francis Lubida</h4>
                             <div class="rating">
                                 <i class="fas fa-star text-warning"></i>
                                 <i class="fas fa-star text-warning"></i>
@@ -198,6 +197,7 @@
                                 <i class="far fa-star text-warning"></i>
                             </div>
                         </div>
+                        <small>- Network Engineer, FastNet</small>
                     </div>
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
@@ -205,9 +205,11 @@
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
+                            Show respect and value all individuals for their diverse backgrounds, expe
+                            riences, styles, approaches and ideas.
                         </p>
                         <div class="rate-name flex-space-between">
-                            <small>- Prosper Mbuma</small>
+                            <h4>Prosper Mbuma</h4>
                             <div class="rating">
                                 <i class="fas fa-star text-warning"></i>
                                 <i class="fas fa-star text-warning"></i>
@@ -216,6 +218,7 @@
                                 <i class="far fa-star text-warning"></i>
                             </div>
                         </div>
+                        <small>- Software Developer, Tigo Tanzania</small>
                     </div>
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
@@ -223,9 +226,11 @@
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
+                            Show respect and value all individuals for their diverse backgrounds, expe
+                            riences, styles, approaches and ideas.
                         </p>
                         <div class="rate-name flex-space-between">
-                            <small>- Joseph Nicholas</small>
+                            <h4>Joseph Nicholas</h4>
                             <div class="rating">
                                 <i class="fas fa-star text-warning"></i>
                                 <i class="fas fa-star text-warning"></i>
@@ -234,6 +239,7 @@
                                 <i class="far fa-star text-warning"></i>
                             </div>
                         </div>
+                        <small>- Graphics Designer, Qlicue Agency</small>
                     </div>
                 </div>
             </div>
@@ -242,7 +248,7 @@
         <!-- Partners -->
         <section id="partners" class="bg-white">
             <div class="container">
-                <h1 class="display-4" data-aos="fade-right" data-aos-delay="100">Partiners</h1>
+                <h1 class="display-4">Partiners</h1>
                 <div class="row flex pt-3">
                     <div class="partner"><a href="http://www.tanesco.co.tz" target="_blank"
                             rel="noopener noreferrer"><img src="assets/img/partner/partner1.png" alt="partner"></a>
@@ -283,9 +289,6 @@
                         Follow Us
                     </h3>
                     <div class="social">
-                        <a href="#" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-pinterest"></i>
-                        </a>
                         <a href="#" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
