--- a/mservices/index.html
+++ b/mservices/index.html
@@ -285,26 +285,46 @@
                     </nav>
                 </div>
                 <div class="col">
-                    <h3>
-                        Follow Us
-                    </h3>
-                    <div class="social">
-                        <a href="#" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-facebook"></i>
-                        </a>
-                        <a href="#" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-twitter"></i>
-                        </a>
+                    <h3>Contact Us</h3>
+                    <div class="address">
+                        <p>
+                            <i class="fas fa-map-marker-alt"></i>
+                            Goba Njia Nne, Madale Road
+                            <br>
+                            P.O. Box 71480, Dar es Salaam, Tanzania
+                        </p>
+                    </div>
+                    <div class="address">
+                        <p>
+                            <i class="fas fa-globe"></i> www.mservices.co.tz
+                        </p>
+                    </div>
+                    <div class="address">
+                        <p>
+                            <i class="fas fa-phone-alt"></i> +255 785 398 434
+                            <br>
+                            +255 713 500 365
+                        </p>
+                    </div>
+                    <div class="address">
+                        <p>
+                            <i class="fas fa-envelope"></i> info@mservices.co.tz
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="flex-space-between pt-2">
                 <p class="lead pt-2">&copy; <span id="year"></span> M Services, All Rights Reserved</p>
-                <div class="footer-brand">
-                    <span>M Services | Electrical contractor</span> <i class="far fa-lightbulb text-danger"></i>
+                <div class="social">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-twitter"></i>
+                    </a>
                 </div>
             </div>
         </div>
